# anvil

./: Cargo.toml  LICENSE  README.md  repo_files.txt
.github/workflows/: determinism.yml
assets/recipes/: buildings.ron  items.ron
src/: behavior.rs  behaviors.rs  btree.rs  command_bus.rs  components.rs  entity_commands.rs  entity_serde.rs  input_controller.rs  main.rs  map.rs  recipes.rs  rng.rs  sim_loop.rs  systems.rs  time.rs  trace.rs  util.rs  window.rs  world_hash.rs
src/behavior/: build_knowledge.rs  mod.rs
src/recipes/: loader.rs  mod.rs  types.rs
