[package]
name = "anvil"
version = "0.1.0"
edition = "2021"

[features]
hash_debug = []

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["ttf"]

[dependencies]
hecs = "0.10.5"
rand = "0.9.2"
rand_chacha = "0.9.0"
blake3 = "1.8.2"
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
anyhow = "1.0.99"
